<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/image_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <com.fabianshallari.pixabay.view.SquareImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?textAppearanceBody1"
        android:textStyle="italic"
        tools:text="@string/uploaded_by"
        />

    <TextView
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/tags"
        android:textAppearance="?textAppearanceBody2"
        />

    <TextView
        android:id="@+id/likes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/likes"
        android:textAppearance="?textAppearanceBody2"
        />

    <TextView
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/comments"
        android:textAppearance="?textAppearanceBody2"
        />

    <TextView
        android:id="@+id/downloads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/downloads"
        android:textAppearance="?textAppearanceBody2"
        />

  </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
